      Requested by David Mosberger <davidm@hpl.hp.com>.
    - debian/sysdeps/amd64.mk: Likewise.
    - debian/sysdeps/i386.mk: Likewise.
    - debian/sysdeps/s390.mk: Likewise.
    - debian/sysdeps/sparc.mk: Likewise.

    - debian/patches/glibc232-hppa-unwindinfo.dpatch: Add for unwind
      information for hppa plt fixup routine.  (Closes: #281993)

 -- GOTO Masanori <gotom@debian.org>  Sat,  6 Nov 2004 19:04:26 +0900

glibc (2.3.2.ds1-18) unstable; urgency=high

  * GOTO Masanori <gotom@debian.org>

    - debian/patches/glibc232-sparc64-softfp.dpatch: Add to fix
      glibc build breakage on sparc with binutils 2.15.  It's caused by
      the register misusage, that was allowed by the previous binutils.
      (Closes: #266598)
    - debian/debhelper.in/libc.postinst: Fix to execute NSS services
      correctly when file-rc is used.  (Closes: #275403)

    - debian/patches/90_glibc232-timezones.dpatch: Update to tzdata2004e.

    - debian/debhelper.in/locales.prerm: Add to fix warning not to remove
      /usr/lib/locale/locale-archive.  (Closes: #264020)
    - debian/debhelper.in/locales.postrm: Add to remove /etc/locale.gen
      when purge is specified.

 -- GOTO Masanori <gotom@debian.org>  Tue,  5 Oct 2004 09:32:01 +0900

glibc (2.3.2.ds1-17) unstable; urgency=high

  * GOTO Masanori <gotom@debian.org>

    - debian/sysdeps/depflags.pl: Fix typo, from "kerberos4th-dev" to
      "kerberos4kth-dev".  (Closes: #266637)
    - debian/patches/00list: Add locale-byn_ER.dpatch that was missing
      when I fixed.  (Closes: #270998)

    - debian/patches/glibc23-dlclose-l_opencount.dpatch: Fix reference
      counter in dl that does not sometimes decrement correctly.
      (Closes: #233301, #259211)
    - debian/patches/glibc232-globfree-clear.dpatch: Workaround and
      to make sure that fix to enforce clear gl_pathc and gl_pathv in
      globfree() for sarge to conform LFS test, requested by Jeff Licquia.
      (Closes: #264884)
