@@ -20,6 +20,8 @@ glibc (2.3.2.ds1-19) unstable; urgency=low
     - debian/patches/glibc232-hppa-unwindinfo.dpatch: Add for unwind
       information for hppa plt fixup routine.  (Closes: #281993)
 
+    - debian/make-cvs-patch.sh: Change like make-cvs-locales-patch.sh.
+
  -- GOTO Masanori <gotom@debian.org>  Sat,  6 Nov 2004 19:04:26 +0900
 
 glibc (2.3.2.ds1-18) unstable; urgency=high
